--- a/syntaxes/src/fracas.tmLanguage.yml
+++ b/syntaxes/src/fracas.tmLanguage.yml
@@ -41,7 +41,7 @@ repository:
         match: >
           (?x)
           (?<=[\(|\{|\[])
-          (define-enum|define-game-data|define-key|define-text|define-mask|define-type-optional|define-syntax|define-type|define-variant|define)
+          (define-enum|define-game-data|define-key|define-text|define-string-table|define-mask|define-type-optional|define-syntax|define-syntax-rule|define-type|define-variant|define|define-list)
           (?=[\)|\}|\]|\s])
 
   fracas-keyword-operator:
