--- a/package.json
+++ b/package.json
@@ -364,24 +364,18 @@
         "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
-        "@types/glob": "^7.1.3",
+        "@types/glob": "^7.2.0",
         "@types/mocha": "^8.2.2",
-        "@types/node": "^14.17.33",
-        "@types/vscode": "^1.59.0",
-        "@typescript-eslint/eslint-plugin": "^4.30.0",
-        "@typescript-eslint/parser": "^4.30.0",
-        "esbuild": "^0.12.24",
-        "eslint": "^7.32.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-config-standard": "^16.0.3",
-        "eslint-plugin-import": "^2.24.2",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-promise": "^5.1.0",
-        "glob": "^7.1.7",
+        "@types/node": "^14.18.21",
+        "@types/vscode": "^1.67.0",
+        "@typescript-eslint/eslint-plugin": "^5.27.0",
+        "@typescript-eslint/parser": "^5.27.0",
+        "esbuild": "^0.14.0",
+        "eslint": "^8.17.0",
+        "glob": "^7.2.3",
         "mocha": "^9.2.2",
-        "prettier": "^2.3.2",
-        "typescript": "^4.3.2",
+        "prettier": "^2.6.2",
+        "typescript": "^4.8.0-dev.20220518",
         "vscode-test": "^1.5.2"
     },
     "dependencies": {
