Precompile on save. Use only 1/2 of  CPU cores and disable execution until done.

--- a/package.json
+++ b/package.json
@@ -231,6 +231,7 @@
             {
                 "command": "vscode-fracas.runFile",
                 "title": "Racket: Run file in terminal",
+                "enablement": "vscode-fracas.ready",
                 "icon": {
                     "light": "images/run.svg",
                     "dark": "images/run.svg"
@@ -238,11 +239,13 @@
             },
             {
                 "command": "vscode-fracas.executeSelectionInRepl",
-                "title": "Racket: Execute selection in REPL"
+                "title": "Racket: Execute selection in REPL",
+                "enablement": "vscode-fracas.ready"
             },
             {
                 "command": "vscode-fracas.openRepl",
-                "title": "Racket: Open the REPL for the current file"
+                "title": "Racket: Open the REPL for the current file",
+                "enablement": "vscode-fracas.ready"
             },
             {
                 "command": "vscode-fracas.showOutputTerminal",
@@ -250,19 +253,23 @@
             },
             {
                 "command": "vscode-fracas.compileSelectedFracasObject",
-                "title": "Fracas: Compile Selected Object"
+                "title": "Fracas: Compile Selected Object",
+                "enablement": "vscode-fracas.ready"
             },
             {
                 "command": "vscode-fracas.recompileFracasObject",
-                "title": "Fracas: Recompile Previous Object"
+                "title": "Fracas: Recompile Previous Object",
+                "enablement": "vscode-fracas.ready"
             },
             {
                 "command": "vscode-fracas.makeStringTableImport",
-                "title": "Fracas: Make String Table CPP"
+                "title": "Fracas: Make String Table CPP",
+                "enablement": "vscode-fracas.ready"
             },
             {
                 "command": "vscode-fracas.precompileFracasFile",
-                "title": "Fracas: Precompile File"
+                "title": "Fracas: Precompile File",
+                "enablement": "vscode-fracas.ready"
             },
             {
                 "command": "vscode-fracas.ue4OpenAsset",
