--- a/package.json
+++ b/package.json
@@ -397,6 +397,7 @@
         "ini": "^2.0.0",
         "tmp": "^0.2.1",
         "tmp-promise": "^3.0.3",
+        "tree-kill": "1.2.2",
         "vscode-languageclient": "^7.0.0"
     }
 }
